# voxlinux

./: .gitignore  Cargo.toml  README.md  y
intentctl/: Cargo.toml
intentctl/src/: advisor.rs  cli.rs  executor.rs  explain_cmd.rs  gui.rs  ipc_client.rs  main.rs  reader.rs  watcher.rs
voxlinux/: Cargo.toml
voxlinux/src/: lib.rs  main.rs  repair_plan.rs
voxlinuxd/: Cargo.toml
voxlinuxd/src/: explain.rs  healer.rs  healing_level.rs  health.rs  ipc.rs  lib.rs  main.rs  pacman.rs  predictive.rs  probe.rs  repair_executor.rs  repair_plan.rs  state.rs  system_state.rs  systemd.rs  verifier.rs
voxlinuxd/src/core/: AutonomousRepair.rs  ai_advisor.rs  classifier.rs  confidence.rs  confidence_eval.rs  deferred.rs  detector.rs  heal_gate.rs  healer.rs  mod.rs  opinion.rs  policy.rs  repair_builder.rs  reporter.rs
