[package]
name = "intentctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
voxlinuxd = { path = "../voxlinuxd" }
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
gtk4 = "0.11"
glib = "0.18"
notify-rust = "4"
notify = "6.1"
voxlinux = { path = "/home/lakshith/projects/voxlinux/voxlinux" }
