[package]
name = "voxlinuxd"
version = "0.1.0"
edition = "2024"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
voxlinux = { path = "/home/lakshith/projects/voxlinux/voxlinux" }
